# BlendNet

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-headless-wasm-build/: .continue-here.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-07-PLAN.md  01-CONTEXT.md  01-RESEARCH.md  01-UAT.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cmake/: emscripten_overrides.cmake  emscripten_platform_overrides.cmake  wasm_sources.cmake  wasm_toolchain.cmake
cmake/fake_modules/: FindEigen3.cmake  FindEpoxy.cmake  FindFreetype.cmake  FindJPEG.cmake  FindOpenImageIO.cmake  FindPNG.cmake  FindTIFF.cmake  FindThreads.cmake  FindZLIB.cmake  FindZstd.cmake  Findfmt.cmake  Findsse2neon.cmake
cmake/host_tools/: CMakeLists.txt
cmake/stubs/OpenImageIO/: imageio.h  ustring.h
cmake/wasm_find_modules/: FindOpenImageIO.cmake
docs/: BUILD_STATUS.md
patches/: BLI_resource_scope.wasm32.patch  CMakeLists.wasm.patch  image_cache_keys.wasm32.patch  imbuf_oiio_stub.wasm32.patch  jpeg_boolean_compat.wasm32.patch  makesdna_alignment.wasm32.patch  platform_unix.wasm32.patch  storage.wasm32.patch
scripts/: build-host-tools.sh  build-wasm-deps.sh  build-wasm-full.sh  build-wasm.sh  patch-ninja-host-tools.sh  run-wasm-generator.sh  setup-wasm-deps.sh  test-blend-query.js  test-main-loop.js  test-memory.js  test-threading.js  test-wasm-load.js
source/: wasm_headless_main.cc
web/: index.html  serve.py
